Complete the checkout process

--- a/public/css/tailwindCommon.css
+++ b/public/css/tailwindCommon.css
@@ -1686,6 +1686,11 @@ video {
   background-color: rgb(17 205 239 / var(--tw-bg-opacity));
 }
 
+.bg-red-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
 }
@@ -1726,6 +1731,10 @@ video {
 
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.fill-current {
+  fill: currentColor;
 }
 
 .p-7\.5 {
