--- a/public/scss/admin/utils.scss
+++ b/public/scss/admin/utils.scss
@@ -10,7 +10,18 @@ $primary-color: #3bb77e;
 $primary-color-light: #f6f5ff;
 $toggle-color: #ddd;
 $text-color: #707070;
+$text-warning-color: #ee5253;
 
 /* ====== Transition ====== */
 $tran-03: all 0.3s ease;
 $tran-05: all 0.5s ease;
+
+* {
+     margin: 0;
+
+     padding: 0;
+
+     box-sizing: border-box;
+
+     font-family: $primary-font;
+}
