--- a/public/scss/admin/adminLogin.css
+++ b/public/scss/admin/adminLogin.css
@@ -2,5 +2,116 @@
 /* ===== Fonts ===== */
 /* ===== Colors ===== */
 /* ====== Transition ====== */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+body {
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+.wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  height: 100vh;
+  padding: 150px 0;
+}
+.wrapper .form-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 30px 20px 30px;
+  border-radius: 12px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.wrapper .form-wrapper .information {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.wrapper .form-wrapper .information .logo {
+  width: 20%;
+}
+.wrapper .form-wrapper .information .title {
+  margin-top: 20px;
+}
+.wrapper .form-wrapper .form {
+  width: 100%;
+  padding-top: 40px;
+}
+.wrapper .form-wrapper .form .form-group {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding-bottom: 25px;
+}
+.wrapper .form-wrapper .form .form-group label {
+  padding-bottom: 8px;
+  font-weight: 600;
+}
+.wrapper .form-wrapper .form .form-group input {
+  padding: 10px 15px;
+  border: 2px solid #dfe6e9;
+  border-radius: 6px;
+  font-size: 1rem;
+}
+.wrapper .form-wrapper .form .form-group input:focus {
+  outline: none;
+  border-color: #3bb77e;
+}
+.wrapper .form-wrapper .form .form-group input.error {
+  border-color: #ee5253;
+}
+.wrapper .form-wrapper .form .form-group p {
+  padding-top: 5px;
+  color: #ee5253;
+}
+.wrapper .form-wrapper .form .form-group p.hidden {
+  display: none;
+}
+.wrapper .form-wrapper .form .controller {
+  width: 100%;
+  padding-bottom: 20px;
+}
+.wrapper .form-wrapper .form .controller button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  margin: 0 auto;
+  padding: 10px;
+  border: 0;
+  border-radius: 6px;
+  font-size: 1rem;
+  color: #fff;
+  background-color: #3bb77e;
+}
+.wrapper .form-wrapper .form .controller button:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+.wrapper .form-wrapper .form .controller button #login-loader {
+  width: 20px;
+  height: 20px;
+  border: 3px solid hsla(228deg, 22%, 95%, 0.2);
+  border-top-color: hsla(228deg, 22%, 95%, 0.8);
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+.wrapper .form-wrapper .form .controller button.disabled {
+  opacity: 0.5;
+}
+.wrapper .form-wrapper .form .controller button.disabled:hover {
+  pointer-events: none;
+}
 
 /*# sourceMappingURL=adminLogin.css.map */
