--- a/public/css/tailwindCommon.css
+++ b/public/css/tailwindCommon.css
@@ -761,10 +761,6 @@ video {
   margin-right: 0.5rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .mb-7\.5 {
   margin-bottom: 1.875rem;
 }
@@ -845,6 +841,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-\[30px\] {
   margin-bottom: 30px;
 }
@@ -855,18 +855,6 @@ video {
 
 .ml-2 {
   margin-left: 0.5rem;
-}
-
-.mr-auto {
-  margin-right: auto;
-}
-
-.mb-\[10px\] {
-  margin-bottom: 10px;
-}
-
-.ml-\[5px\] {
-  margin-left: 5px;
 }
 
 .mt-6 {
@@ -887,6 +875,18 @@ video {
 
 .mr-\[2px\] {
   margin-right: 2px;
+}
+
+.ml-\[5px\] {
+  margin-left: 5px;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.mb-\[10px\] {
+  margin-bottom: 10px;
 }
 
 .mt-\[-5px\] {
@@ -939,6 +939,10 @@ video {
 
 .ml-3 {
   margin-left: 0.75rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
 }
 
 .block {
@@ -1113,10 +1117,6 @@ video {
   width: 35%;
 }
 
-.w-\[45px\] {
-  width: 45px;
-}
-
 .w-1\/2 {
   width: 50%;
 }
@@ -1127,6 +1127,10 @@ video {
 
 .w-\[33\.33\%\] {
   width: 33.33%;
+}
+
+.w-\[45px\] {
+  width: 45px;
 }
 
 .w-\[25\%\] {
@@ -1528,10 +1532,6 @@ video {
   background-repeat: no-repeat;
 }
 
-.fill-primary-color {
-  fill: #3bb77e;
-}
-
 .fill-current {
   fill: currentColor;
 }
@@ -1582,14 +1582,14 @@ video {
   padding-right: 1rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-2\.5 {
@@ -1642,9 +1642,14 @@ video {
   padding-bottom: 7.5rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .py-\[120px\] {
@@ -1662,19 +1667,9 @@ video {
   padding-bottom: 10px;
 }
 
-.py-\[14px\] {
-  padding-top: 14px;
-  padding-bottom: 14px;
-}
-
 .px-11 {
   padding-left: 2.75rem;
   padding-right: 2.75rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .px-\[10px\] {
@@ -1690,6 +1685,11 @@ video {
 .px-\[5px\] {
   padding-left: 5px;
   padding-right: 5px;
+}
+
+.py-\[14px\] {
+  padding-top: 14px;
+  padding-bottom: 14px;
 }
 
 .py-\[9px\] {
@@ -1848,6 +1848,10 @@ video {
   font-size: .75rem;
 }
 
+.text-sm {
+  font-size: .875rem;
+}
+
 .text-title {
   font-size: 3.188rem;
 }
@@ -1858,10 +1862,6 @@ video {
 
 .text-4xl {
   font-size: 2.25rem;
-}
-
-.text-sm {
-  font-size: .875rem;
 }
 
 .text-3xl {
@@ -2041,16 +2041,6 @@ video {
   color: rgb(28 33 55 / var(--tw-text-opacity));
 }
 
-.text-green-700 {
-  --tw-text-opacity: 1;
-  color: rgb(21 128 61 / var(--tw-text-opacity));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-body-text {
   --tw-text-opacity: 1;
   color: rgb(74 74 74 / var(--tw-text-opacity));
@@ -2059,6 +2049,11 @@ video {
 .text-primary-color {
   --tw-text-opacity: 1;
   color: rgb(59 183 126 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-secondary-color {
