--- a/public/scss/admin/output/adminLogin.css
+++ b/public/scss/admin/output/adminLogin.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 /* ===== Fonts ===== */
 /* ===== Colors ===== */
-/* ====== Transition ====== */
 * {
   margin: 0;
   padding: 0;
@@ -9,6 +8,20 @@
   font-family: "Source Sans Pro", sans-serif;
 }
 
+#loader {
+  width: 20px;
+  height: 20px;
+  border: 3px solid hsla(228deg, 22%, 95%, 0.2);
+  border-top-color: hsla(228deg, 22%, 95%, 0.8);
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
 body {
   font-family: "Source Sans Pro", sans-serif;
 }
@@ -93,19 +106,6 @@ body {
 .wrapper .form-wrapper .form .controller button:hover {
   opacity: 0.8;
   cursor: pointer;
-}
-.wrapper .form-wrapper .form .controller button #login-loader {
-  width: 20px;
-  height: 20px;
-  border: 3px solid hsla(228deg, 22%, 95%, 0.2);
-  border-top-color: hsla(228deg, 22%, 95%, 0.8);
-  border-radius: 50%;
-  animation: spin 0.8s linear infinite;
-}
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
 }
 .wrapper .form-wrapper .form .controller button.disabled {
   opacity: 0.5;
