--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,5 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
+
+body::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+body::-webkit-scrollbar {
+  width: 10px;
+
+  background-color: #f5f5f5;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+}
 
 * {
   margin: 0;
@@ -27,7 +41,7 @@
 
 /* Các biến phông chữ */
 :root {
-  --primary-font: "Open Sans", sans-serif ;
+  --primary-font: "Open Sans", sans-serif;
 }
 
 html {
