--- a/public/css/tailwindCommon.css
+++ b/public/css/tailwindCommon.css
@@ -673,12 +673,12 @@ video {
   z-index: 10;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
 .z-\[1\] {
   z-index: 1;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .z-\[2\] {
@@ -1009,10 +1009,6 @@ video {
   height: 0px;
 }
 
-.h-full {
-  height: 100%;
-}
-
 .h-7\.5 {
   height: 1.875rem;
 }
@@ -1023,6 +1019,10 @@ video {
 
 .h-\[46px\] {
   height: 46px;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-\[45px\] {
@@ -1041,16 +1041,16 @@ video {
   height: 80px;
 }
 
+.h-auto {
+  height: auto;
+}
+
 .h-36 {
   height: 9rem;
 }
 
 .h-8 {
   height: 2rem;
-}
-
-.h-auto {
-  height: auto;
 }
 
 .min-h-\[280px\] {
@@ -1141,6 +1141,10 @@ video {
   width: 80px;
 }
 
+.w-\[150px\] {
+  width: 150px;
+}
+
 .w-8 {
   width: 2rem;
 }
@@ -1149,8 +1153,12 @@ video {
   width: 12rem;
 }
 
-.w-\[150px\] {
-  width: 150px;
+.w-\[56px\] {
+  width: 56px;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .max-w-\[1400px\] {
@@ -1163,6 +1171,10 @@ video {
 
 .flex-shrink-0 {
   flex-shrink: 0;
+}
+
+.border-collapse {
+  border-collapse: collapse;
 }
 
 .border-separate {
@@ -2174,16 +2186,16 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-opacity {
-  transition-property: opacity;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .transition {
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-opacity {
+  transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
