--- a/public/css/tailwindCommon.css
+++ b/public/css/tailwindCommon.css
@@ -1251,6 +1251,10 @@ video {
   justify-content: flex-start;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
